--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "fs-readdir-recursive": "^1.0.0",
     "handlebars": "^4.0.5",
-    "kss": "^2.1.1"
+    "js-beautify": "^1.5.10",
+    "kss": "^2.1.1",
+    "marked": "^0.3.5"
   }
 }
